syntax = "proto3";
option java_multiple_files=true;
package firstapp.proto;

message Status {
    // code = 0 => success
    int64 code = 1;
    string error = 2;
}

message Ping {
    int64 timestamp = 1;
}

message Pong {
    int64 timestamp = 1;
    string system_name = 2;
    string system_version = 3;
}